// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCheckbox renders 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={false}
      className="custom-control-input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    />
  </label>
</div>
`;

exports[`ClayCheckbox renders as checked 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={true}
      className="custom-control-input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Checked
      </span>
    </span>
  </label>
</div>
`;

exports[`ClayCheckbox renders as checked and disabled 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={true}
      className="custom-control-input"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Checked disabled
      </span>
    </span>
  </label>
</div>
`;

exports[`ClayCheckbox renders as disabled 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={false}
      className="custom-control-input"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Unchecked disabled
      </span>
    </span>
  </label>
</div>
`;

exports[`ClayCheckbox renders with a label 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={false}
      className="custom-control-input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Unchecked
      </span>
    </span>
  </label>
</div>
`;

exports[`ClayCheckbox renders with an indeterminate value 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={true}
      className="custom-control-input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Indeterminate
      </span>
    </span>
  </label>
</div>
`;

exports[`ClayCheckbox renders with an indeterminate value and disabled 1`] = `
<div
  className="custom-control custom-checkbox"
>
  <label>
    <input
      checked={true}
      className="custom-control-input"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="custom-control-label"
    >
      <span
        className="custom-control-label-text"
      >
        Indeterminate disabled
      </span>
    </span>
  </label>
</div>
`;
